@@ -14,10 +14,13 @@ import org.junit.Test;
 import seedu.address.logic.CommandHistory;
 import seedu.address.logic.commands.CommandResult;
 import seedu.address.model.lesson.Lesson;
-import seedu.address.model.modelmanager.quiz.Quiz;
-import seedu.address.model.modelmanager.quiz.QuizCard;
-import seedu.address.model.modelmanager.quiz.QuizModel;
-import seedu.address.model.modelmanager.quiz.QuizModelManager;
+import seedu.address.model.modelmanager.ManagementModel;
+import seedu.address.model.modelmanager.ManagementModelManager;
+import seedu.address.model.modelmanager.QuizModel;
+import seedu.address.model.modelmanager.QuizModelManager;
+import seedu.address.model.quiz.Quiz;
+import seedu.address.model.quiz.QuizCard;
+import seedu.address.model.quiz.QuizMode;
 import seedu.address.model.session.Session;
 import seedu.address.model.srscard.SrsCard;
 import seedu.address.model.user.CardSrsData;
@@ -29,13 +32,13 @@ import seedu.address.testutil.SrsCardBuilder;
 
 public class QuizStartCommandTest {
     private static final CommandHistory commandHistory = new CommandHistory();
+
     @Test
     public void constructor_throwsNullPointerException () {
         Assert.assertThrows(NullPointerException.class, () ->
                 new QuizStartCommand(null));
     }
-
-    //TODO: after obtaining data from model manager of lesson and user.
+    //TODO: fix it.
     /*@Test
     public void execute_success() throws Exception {
         ManagementModel managementModel = new ManagementModelManager();
@@ -45,49 +48,63 @@ public class QuizStartCommandTest {
     }*/
 
     @Test
-    public void executeActual_success() {
+    public void executeActual_learn_success() {
         Lesson lesson = new LessonBuilder().build();
         final Session session = new SessionBuilder(new Session("01-01-Learn", 2,
-                Quiz.Mode.LEARN, List.of(new SrsCardBuilder().build(),
+                QuizMode.LEARN, List.of(new SrsCardBuilder().build(),
                 new SrsCardBuilder(new SrsCard(CARD_JAPAN, new CardSrsData(CARD_JAPAN.hashCode(), 1,
                         1, Instant.now().plus(Duration.ofHours(2))), lesson)).build()))).build();
         final QuizCard card1 = new QuizCard("Belgium", "Brussels");
         final QuizCard card2 = new QuizCard("Japan", "Tokyo");
         final List<QuizCard> quizCards = new ArrayList<>(Arrays.asList(card1, card2));
-        final Quiz quiz = new Quiz(quizCards, Quiz.Mode.LEARN);
+        final Quiz quiz = new Quiz(quizCards, QuizMode.LEARN);
 
         QuizModelManager expectedModel = new QuizModelManager();
-        expectedModel.init(quiz);
+        ManagementModel expectedManagementModel = new ManagementModelManager();
+        expectedModel.initWithSession(quiz, session, expectedManagementModel);
         expectedModel.getNextCard();
         CommandResult expectedCommandResult = new QuizStartCommand(session).executeActual(expectedModel,
-                commandHistory);
+                expectedManagementModel, commandHistory);
+
         QuizModel actualModel = new QuizModelManager();
+        ManagementModelManager actualManagementModel = new ManagementModelManager();
         QuizStartCommand quizStartCommand = new QuizStartCommand(session);
+        assertEquals(quizStartCommand.getSession(), session);
 
         CommandHistory expectedCommandHistory = new CommandHistory(commandHistory);
-        CommandResult result = quizStartCommand.executeActual(actualModel, commandHistory);
+        CommandResult result = quizStartCommand.executeActual(actualModel, actualManagementModel, commandHistory);
         assertEquals(expectedCommandResult, result);
         assertEquals(expectedCommandHistory, commandHistory);
 
-        /*final QuizCard card1 = new QuizCard("Japan", "Tokyo");
-        final QuizCard card2 = new QuizCard("Hungary", "Budapest");
-        final QuizCard card3 = new QuizCard("Christmas Island", "The Settlement");
-        final QuizCard card4 = new QuizCard("中国", "北京");
-        final List<QuizCard> quizCards = new ArrayList<>(Arrays.asList(card1, card2, card3, card4));
-        final Quiz quiz = new Quiz(quizCards, Quiz.Mode.LEARN);
+    }
+
+    @Test
+    public void executeActual_review_success() {
+        Lesson lesson = new LessonBuilder().build();
+        final Session session = new SessionBuilder(new Session("01-01-Learn", 2,
+            QuizMode.REVIEW, List.of(new SrsCardBuilder().build(),
+            new SrsCardBuilder(new SrsCard(CARD_JAPAN, new CardSrsData(CARD_JAPAN.hashCode(), 1,
+                1, Instant.now().plus(Duration.ofHours(2))), lesson)).build()))).build();
+        final QuizCard card1 = new QuizCard("Belgium", "Brussels");
+        final QuizCard card2 = new QuizCard("Japan", "Tokyo");
+        final List<QuizCard> quizCards = new ArrayList<>(Arrays.asList(card1, card2));
+        final Quiz quiz = new Quiz(quizCards, QuizMode.REVIEW);
 
         QuizModelManager expectedModel = new QuizModelManager();
-        expectedModel.init(quiz);
+        ManagementModelManager expectedManagementModel = new ManagementModelManager();
+        expectedModel.initWithSession(quiz, session, expectedManagementModel);
         expectedModel.getNextCard();
-        CommandResult expectedCommandResult = new QuizStartCommand().executeActual(expectedModel, commandHistory);
+        CommandResult expectedCommandResult = new QuizStartCommand(session).executeActual(expectedModel,
+            expectedManagementModel, commandHistory);
 
         QuizModel actualModel = new QuizModelManager();
-        QuizStartCommand quizStartCommand = new QuizStartCommand();
+        ManagementModelManager actualManagementModel = new ManagementModelManager();
+        QuizStartCommand quizStartCommand = new QuizStartCommand(session);
+        assertEquals(quizStartCommand.getSession(), session);
 
         CommandHistory expectedCommandHistory = new CommandHistory(commandHistory);
-        CommandResult result = quizStartCommand.executeActual(actualModel, commandHistory);
+        CommandResult result = quizStartCommand.executeActual(actualModel, actualManagementModel, commandHistory);
         assertEquals(expectedCommandResult, result);
-        assertEquals(expectedModel, actualModel);
-        assertEquals(expectedCommandHistory, commandHistory);*/
+        assertEquals(expectedCommandHistory, commandHistory);
     }
 }
